# lineur

./: .gitignore  CMakeLists.txt  readme.md
app/core/: weights.h
app/gui/: appstate.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
scripts/: config.json  generate_data.py  train.csv
scripts/classification/: config.json  generate_data.py  get_train_csv.py  train.csv
scripts/regression/: config.json  generate_data.py  get_train_csv.py  train.csv
